--- a/app/src/main/res/layout/fragment_sea_recipe.xml
+++ b/app/src/main/res/layout/fragment_sea_recipe.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.searecipes.SeaRecipeFragment">
@@ -62,7 +59,10 @@
                     android:layout_height="200dp"
                     android:layout_weight="1"
                     android:foreground="?android:attr/selectableItemBackground"
-                    android:padding="10dp" />
+                    android:padding="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/cuisine_1_title"
@@ -282,5 +282,3 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
