--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,14 +12,14 @@
             android:id="@+id/nav_recipes"
             android:icon="@drawable/baseline_list_alt_black_48"
             android:title="@string/menu_recipes" />
-        <item
-            android:id="@+id/nav_trends"
-            android:icon="@drawable/baseline_trending_up_black_48"
-            android:title="@string/menu_trends" />
-        <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Settings" />
+<!--        <item-->
+<!--            android:id="@+id/nav_trends"-->
+<!--            android:icon="@drawable/baseline_trending_up_black_48"-->
+<!--            android:title="@string/menu_trends" />-->
+<!--        <item-->
+<!--            android:id="@+id/nav_settings"-->
+<!--            android:icon="@drawable/ic_menu_manage"-->
+<!--            android:title="Settings" />-->
     </group>
 
 </menu>
